--- a/src/styles.scss
+++ b/src/styles.scss
@@ -837,10 +837,10 @@ mat-card {
   }
 
   .innernav {
-    padding: 20px;
+    padding: 40px;
 
     button {
-      padding: 10px 0;
+      // padding: 10px 0;
       font-size: 11pt;
       color: #ffffff;
     }
