--- a/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
+++ b/src/app/components/public-document-mobile-category-bars/public-document-mobile-category-bars.component.scss
@@ -97,6 +97,7 @@
       font-weight: bold;
       color: #ffffff;
       transition: all .2s linear;
+      text-align: left !important;
     }
 
     .catname:hover {
