--- a/src/app/components/public-document-mobile-view/public-document-mobile-view.component.scss
+++ b/src/app/components/public-document-mobile-view/public-document-mobile-view.component.scss
@@ -20,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center center;
 
     .overlay {
       position: absolute;
