--- a/src/app/components/share-sheet/share-sheet.component.html
+++ b/src/app/components/share-sheet/share-sheet.component.html
@@ -14,12 +14,12 @@
         class="fb-xfbml-parse-ignore"></a>
     </div>
   </button>
-  <button type="button" class="icon instagram-net" disabled></button>
+  <!-- <button type="button" class="icon instagram-net" disabled></button>
   <button type="button" class="icon whatsapp-net" disabled></button>
   <button type="button" class="icon linkedin-net" disabled></button>
   <button type="button" class="icon youtube-net" disabled></button>
   <button type="button" class="icon twitter-net" disabled></button>
-  <button type="button" class="icon tiktok-net" disabled></button>
+  <button type="button" class="icon tiktok-net" disabled></button> -->
 </div>
 
 <div class="set-12 doc-link">
