--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -86,7 +86,7 @@
         </div>
       </mat-tab>
 
-      <mat-tab disabled>
+      <!-- <mat-tab disabled>
         <ng-template mat-tab-label>
           <mat-icon>person</mat-icon>
           <span>Mi Perfil</span>
@@ -112,7 +112,7 @@
           <mat-icon>forum</mat-icon>
           <span>Mensajes</span>
         </ng-template>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </div>
 </div>
