--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -44,3 +44,7 @@
   <p>Para conocer más y seguir las noticias y actualizaciones de la Agenda 2030: <a
       href="https://www.un.org/sustainabledevelopment/es/" target="_blank">visita aquí</a></p>
 </div>
+
+<div class="set-12">
+  <div class="app-footer"></div>
+</div>
