--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -17,3 +17,17 @@
     margin-bottom: 20px;
   }
 }
+
+:host(.fixmobile) {
+  margin-top: 0;
+  padding: 0;
+
+  .set-3 {
+    display: none;
+  }
+
+  .set-6 {
+    padding: 20px;
+    width: 100%;
+  }
+}
