presentation tests IV

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -8,6 +8,13 @@
       <a href="javascript:void(0)" (click)="linkMe('/legales/terminos-condiciones')">Términos y condiciones</a>
     </small>
   </p>
+
+  <div class="set-12 networks">
+    <div class="set-12">
+      <p>Siguenos en:</p>
+      <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
+    </div>
+  </div>
 </div>
 
 <div class="set-12" *ngIf="isMobile" [class.fixmobile]="isMobile">
@@ -20,4 +27,11 @@
       <a href="javascript:void(0)" (click)="linkMe('/legales/terminos-condiciones')">Términos y condiciones</a>
     </small>
   </p>
+
+  <div class="set-12 networks">
+    <div class="set-12">
+      <p>Siguenos en:</p>
+      <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
+    </div>
+  </div>
 </div>
