--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -26,4 +26,13 @@
       margin: 0 !important;
     }
   }
+
+  .networks {
+    margin-top: 20px;
+    justify-content: center !important;
+
+    p {
+      margin-bottom: 10px;
+    }
+  }
 }
