--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
           <span>Documento Punto de Partida</span>
         </button>
         <button type="button" (click)="utilityService.linkMe('/noticias'); open = !open">
-          <span>Agenda 2023</span>
+          <span>¿Quiénes somos?</span>
         </button>
 
         <button type="button" (click)="linkMe('profile')">
