add privacy policy

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -8,6 +8,11 @@
       <a href="javascript:void(0)" (click)="linkMe('/legales/terminos-condiciones')">Términos y condiciones</a>
     </small>
   </p>
+  <p>
+    <small>
+      <a href="javascript:void(0)" (click)="linkMe('/legales/politica-privacidad')">Política de Privacidad</a>
+    </small>
+  </p>
 
   <div class="set-12 networks">
     <div class="set-12">
@@ -25,6 +30,11 @@
   <p>
     <small>
       <a href="javascript:void(0)" (click)="linkMe('/legales/terminos-condiciones')">Términos y condiciones</a>
+    </small>
+  </p>
+  <p>
+    <small>
+      <a href="javascript:void(0)" (click)="linkMe('/legales/politica-privacidad')">Política de Privacidad</a>
     </small>
   </p>
 
