remove document punto de partida

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,9 +64,9 @@
           (click)="utilityService.linkMe('/documentos-publicos/' + coverDocument._id); open = !open">
           <span>Mexicolectivo</span>
         </button>
-        <button type="button" (click)="linkMe('entry-point')">
+        <!-- <button type="button" (click)="linkMe('entry-point')">
           <span>Documento Punto de Partida</span>
-        </button>
+        </button> -->
         <button type="button" (click)="utilityService.linkMe('/noticias'); open = !open">
           <span>¿Quiénes somos?</span>
         </button>
