--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,15 +12,19 @@
           </div>
         </div>
 
-        <!-- <div class="set-12 slide" [class.active]="activeIndex == 1">
-          <p>Conoce nuestro Documento Punto de Partida</p>
-          <button type="button" mat-raised-button color="accent" (click)="popPDF()">click aquí</button>
-        </div> -->
-
         <div class="set-12 slide" [class.active]="activeIndex == 1">
+          <p>Conoce nuestro Documento Punto de Partida</p>
+          <!-- <button type="button" mat-raised-button color="accent" (click)="popPDF()">click aquí</button> -->
+        </div>
+
+        <div class="set-12 slide" [class.active]="activeIndex == 2">
           <p>Alineamos nuestra plataforma a la agenda 2030 de la ONU</p>
           <button type="button" mat-raised-button color="accent" (click)="utilitySrvc.linkMe('/noticias')">leer
             más</button>
+        </div>
+
+        <div class="set-12 slide" [class.active]="activeIndex == 3">
+          <p>Ésta es una plataforma participativa, colaborativa que respeta los derechos de todos</p>
         </div>
       </div>
 
@@ -35,7 +39,8 @@
     <div class="set-12 slidectrls">
       <button type="button" class="sldierbtn" (click)="moveSlide(0)" [class.active]="activeIndex == 0">&nbsp;</button>
       <button type="button" class="sldierbtn" (click)="moveSlide(1)" [class.active]="activeIndex == 1">&nbsp;</button>
-      <!-- <button type="button" class="sldierbtn" (click)="moveSlide(2)" [class.active]="activeIndex == 2">&nbsp;</button> -->
+      <button type="button" class="sldierbtn" (click)="moveSlide(2)" [class.active]="activeIndex == 2">&nbsp;</button>
+      <button type="button" class="sldierbtn" (click)="moveSlide(3)" [class.active]="activeIndex == 3">&nbsp;</button>
     </div>
 
     <div class="tri">&nbsp;</div>
