add terms permalink

--- a/src/app/hub/sign-up/sign-up.component.html
+++ b/src/app/hub/sign-up/sign-up.component.html
@@ -58,13 +58,13 @@
       </p>
       <div class="set-12 row">
         <mat-checkbox color="primary" formControlName="terms"></mat-checkbox>
-        <a href="#">
+        <a href="#" routerLink="/legales/terminos-condiciones">
           <small>Términos y condiciones</small>
         </a>
       </div>
       <div class="set-12 row">
         <mat-checkbox color="primary" formControlName="privacy"></mat-checkbox>
-        <a href="#">
+        <a href="#" routerLink="/legales/politica-privacidad">
           <small>Política de privacidad</small>
         </a>
       </div>
