change slide text

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="set-12 slide" [class.active]="activeIndex == 3">
-          <p>Ésta es una plataforma participativa, colaborativa que respeta los derechos de todos</p>
+          <p>Somos es una plataforma participativa, colaborativa que respeta los derechos de todes</p>
         </div>
       </div>
 
