--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,18 +13,21 @@
         </div>
 
         <div class="set-12 slide" [class.active]="activeIndex == 1">
-          <p>Conoce nuestro Documento Punto de Partida</p>
+          <p>conoce nuestro <span class="txt70">Documento</span> Punto <span class="txt70">de Partida</span></p>
           <!-- <button type="button" mat-raised-button color="accent" (click)="popPDF()">click aquí</button> -->
         </div>
 
         <div class="set-12 slide" [class.active]="activeIndex == 2">
-          <p>Alineamos nuestra plataforma a la agenda 2030 de la ONU</p>
+          <p>alineamos nuestra plataforma a la <span class="txt70">agenda 2030</span> de la
+            <span class="txt70">ONU</span>
+          </p>
           <button type="button" mat-raised-button color="accent" (click)="utilitySrvc.linkMe('/noticias')">leer
             más</button>
         </div>
 
         <div class="set-12 slide" [class.active]="activeIndex == 3">
-          <p>Somos es una plataforma participativa, colaborativa que respeta los derechos de todes</p>
+          <p>somos una plataforma <span class="txt70">participativa</span>, <span class="txt70">colaborativa</span>
+            que respeta los <span class="txt70">derechos</span> de todes</p>
         </div>
       </div>
 
