fix movil slides

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -122,6 +122,10 @@
   }
 
   .fixmobile {
+    .txt70 {
+      font-size: 30pt !important;
+    }
+
     .innerpage {
       padding-top: 0;
     }
