--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,9 +1,9 @@
 :host {
   width: 100%;
   float: left;
-  padding: 20px 40px;
-  background: #D9D9D9;
-  font-size: 9pt;
+  padding: 40px;
+  background: #09f19e;
+  font-size: 11pt;
 
   * {
     margin: 0;
