--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
 
         <div class="set-12 slide" [class.active]="activeIndex == 3">
           <p>somos una plataforma <span class="txt70">participativa</span>, <span class="txt70">colaborativa</span>
-            que respeta los <span class="txt70">derechos</span> de todes</p>
+            que respeta los derechos de todes</p>
         </div>
       </div>
 
@@ -49,7 +49,10 @@
     <div class="tri">&nbsp;</div>
   </div>
 
-  <div class="set-12 videohldr">&nbsp;</div>
+  <div class="set-12 videohldr">
+    &nbsp;
+    <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/3abjA6X8agw" frameborder="0" allowfullscreen></iframe> -->
+  </div>
 
 
 
